test/fixtures/vm/vm_dont_display_runtime_error.snapshot
beginning
middle
test.vm:1
throw new Error("boo!")
^

Error: boo!
    at test.vm:1:7
    at <node-internal-frames>
    at Object.<anonymous> (<project-root>/test/fixtures/vm/vm_dont_display_runtime_error.js:41:4)

Node.js <node-version>
